--- a/verifyertms.tex
+++ b/verifyertms.tex
@@ -1,7 +1,7 @@
 \thesischapter{Simulating and Verifying the European Rail Traffic Management System Using Real Time Maude}{Simulating and Verifying the European Rail Traffic Management System Using Real Time Maude}\label{chapter:verifyertms}\label{chap:verifyertms}
 \chaptermark{Simulating and Verifying ERTMS using Real Time Maude}
 
-In the following we describe how the Real Time Maude tool can be used to analyse the performance and safety of the ERTMS system by both simulation and verification using the Maude LTL model checker (The modelling of ERTMS in Real Time Maude was describe in chapter \ref{chap:modelertms}).  We begin by presenting the simulation of the pentagon example which demonstrates a situation where a slow train is held up by a faster train. Secondly we look at applying model checking to both the pentagon example and the junction example. The safety properties verified for the pentagon example relate to the safety condition "The movement authorities of the two trains do not overlap" whilst the properties for the junction example relate to the safety condition "The point does not move when it is in a train's movement authority". We also modify the pentagon example to use more realistic distances with a track segment length of 25000, segment length of 5000 and train speeds of 70 and 120.  We then apply the LTL model checker and verify this example so that a comparison can be performed between the two pentagon examples in terms of verification difficulty.
+In the following we describe how the Real Time Maude tool can be used to analyse the performance and safety of the ERTMS system by both simulation and verification using the Maude LTL model checker (The modelling of ERTMS in Real Time Maude was describe in Chapter \ref{chap:modelertms}).  We begin by presenting the simulation of the pentagon example which demonstrates a situation where a slow train is held up by a faster train. Secondly we look at applying model checking to both the pentagon example and the junction example. The safety properties verified for the pentagon example relate to the safety condition "The movement authorities of the two trains do not overlap" whilst the properties for the junction example relate to the safety condition "The point does not move when it is in a train's movement authority". We also modify the pentagon example to use more realistic distances with a track segment length of 25000, segment length of 5000 and train speeds of 70 and 120.  We then apply the LTL model checker and verify this example so that a comparison can be performed between the two pentagon examples in terms of verification difficulty.
 
 It is stated by its developers that Real Time Maude is not first and foremost a verification tool. This is due to some inherent limitations in LTL-model checking that hinder the verification of infinite state systems. We have, as in the sensor network example \cite{PO07}, only model checked a portion of the state space for the pentagon. This is however enough to have confidence in the correctness of the system with respect to a given safety condition. A larger portion of the state space could be model checked by removing non-determinism from the model making it more concrete. This has been done in the junction example where the radio block processor is modified in such a way that it processes movement authorities in one time step.
 
@@ -96,11 +96,11 @@ Result ClockedSystem :
 \caption{A graph comparing the distances of train1 and train2}
 \end{figure}
 
-The first graph (See fig \ref{t1graph}.) shows the speed and distance of train1 over time. The train spends the majority of its time at maximum speed however there is a slight decrease in speed when a movement authority is requested. The distance of the train increases in roughly a linear fashion. The second graph (See fig \ref{t2graph}.) shows the speed and distance of train2 over time. The train brakes repeatedly and at one position comes to a complete stop as it waits for the slower train to progress and exit its current track segment. The distance time graph shows this stop/start behaviour through a wavy appearance. The final graph (See fig \ref{t1t2graph}.) shows that there is a consistent distance between the two trains of at least one track segment. Due to the discretisation of time we have had to favour braking over accelerating in order for the train to stop behind its movement authority. The speed of the train decreases on a transition from accelerating or full speed states to a braking state but does not increase speed immediately on a transition from a braking to accelerating state. This behaviour can be see in the speed graph for train2 (See fig \ref{t2graph}.) where there are several sharp peaks where the maximum speed has only been in place for one time step. In contrast when the train transitions from braking to accelerating there is always a flat section of constant speed. These flat sections of constant speed also occur when the train is braking and the train jumps back into the accelerating state for one time step to ensure the train brakes as closely to the end of movement authority as possible.
+The first graph (See Fig. \ref{t1graph}.) shows the speed and distance of train1 over time. The train spends the majority of its time at maximum speed however there is a slight decrease in speed when a movement authority is requested. The distance of the train increases in roughly a linear fashion. The second graph (See Fig. \ref{t2graph}.) shows the speed and distance of train2 over time. The train brakes repeatedly and at one position comes to a complete stop as it waits for the slower train to progress and exit its current track segment. The distance time graph shows this stop/start behaviour through a wavy appearance. The final graph (See Fig. \ref{t1t2graph}.) shows that there is a consistent distance between the two trains of at least one track segment. Due to the discretisation of time we have had to favour braking over accelerating in order for the train to stop behind its movement authority. The speed of the train decreases on a transition from accelerating or full speed states to a braking state but does not increase speed immediately on a transition from a braking to accelerating state. This behaviour can be see in the speed graph for train2 (See Fig. \ref{t2graph}.) where there are several sharp peaks where the maximum speed has only been in place for one time step. In contrast when the train transitions from braking to accelerating there is always a flat section of constant speed. These flat sections of constant speed also occur when the train is braking and the train jumps back into the accelerating state for one time step to ensure the train brakes as closely to the end of movement authority as possible.
 
 
 \section{The Maude Linear Temporal Logic Model Checker}
-The Real Time Maude system employs the Maude LTL Model Checker, which does on-the-fly model checking (See chapter \ref{chapter:modelchecking}.), for \cite{ES00} verification purposes.  This is a useful automatic tool which allows for the verification and analysis of real time systems. In addition to the positive verification results in which a safety property holds,  the system produces, in the case of a negative verification result, a counterexample trace which describes how the error occurred from the initial state of the system.
+The Real Time Maude system employs the Maude LTL Model Checker, which does on-the-fly model checking (See Chapter \ref{chapter:modelchecking}.), for \cite{ES00} verification purposes.  This is a useful automatic tool which allows for the verification and analysis of real time systems. In addition to the positive verification results in which a safety property holds,  the system produces, in the case of a negative verification result, a counterexample trace which describes how the error occurred from the initial state of the system.
 
  
 
@@ -139,7 +139,7 @@ eq {REST < O1 : Train | speed : N1 >} |= train-s(O1,N1') =
    (N1 == N1')  .
 \end{lstlisting}
 
-Here the natural number N1 in the train object is matched with N1' in the predicate train-s. This can be used to state that train1 does not exceed its maximum speed in any state in the pentagon  example that is reachable in 100 time steps using the following command:
+Here the natural number \texttt{N1} in the train object is matched with \texttt{N1'} in the predicate \texttt{train-s}. This can be used to state that train1 does not exceed its maximum speed in any state in the pentagon  example that is reachable in 100 time steps using the following command:
 
 \begin{center}
 \texttt{(mc initialstate2 |=t  ~(<> train-s(train1,5)) in time <= 100 .)}
@@ -157,7 +157,7 @@ in MODEL-CHECK-ERTMS8 in time
 Result Bool : true
 \end{lstlisting}
 
-We will now show that the train is always at the correct speed for the cons and stopped states. This is formulated using two properties. We can check that a train is in a specific state, in this case the cons state, as follows:
+We will now show that the train is always at the correct speed for the cons and stopped states. This is formulated using two properties. We can check that a train is in a specific state, in this case the \texttt{cons} state, as follows:
 
 \begin{lstlisting}[caption = The cons state property]
 ops train-cons : Oid -> Prop [ctor] .
@@ -168,7 +168,7 @@ eq {REST < O1 : Train | state : S >} |= train-cons(O1)
 
 This predicate holds if there is a train in the configuration with object identifier O1 and a state cons. 
 
-We can use these two properties and others formulated in a similar fashion to formulate model checking properties which can be used to check the correctness of our modelling approach. We can define three safety conditions, one that states "train1 is in the cons state if and only it is at its max speed". The second states "if the speed of train1 is zero then it is either in the cons, stop or acc states and if the train is in the stop state then its speed is zero". The final states "it is not the case that there exists a state in which the speed of train1 is 5" (train1 has a max speed of 4). 
+We can use these two properties and others formulated in a similar fashion to formulate model checking properties which can be used to check the correctness of our modelling approach. We can define three safety conditions, one that states "train1 is in the cons state if and only it is at its max speed". The second states "if the speed of train1 is zero then it is either in the cons, stop or acc states and if the train is in the stop state then its speed is zero". The final states "it is not the case that there exists a state in which the speed of train1 is 5" (train1 has a maximum speed of 4). 
 
 \begin{lstlisting}[caption = The model checking commands for the correctness properties ]
 Correct1 := (mc initialstate2 |=t  
