--- a/minlogdpll.tex
+++ b/minlogdpll.tex
@@ -2,7 +2,7 @@
 \chaptermark{Extracting Decision Procedures in Minlog}
 
 \label{chapter:dpllminlog}
-In the following chapter we describe how the completeness proofs from chapter \ref{chapter:dpll} are implemented in the Minlog system and how Minlog can be used to extract programs from these proofs.  This begins with the definition of preliminary data types and operations described in Chapter \ref{chapter:dpll} and is followed by the implementation of the soundness and completeness of the DPLL proof system in Minlog. A unique feature of the Minlog system, namely \emph{non-computational quantifiers}, have been used to remove redundant data and computations and obtain a more efficient extracted program. The performance and behaviour of the extracted program is analysed in Section \ref{section:dpllapp}. A detailed overview of the Minlog system can be found in the Minlog Reference Manual \cite{MinlogRef}.
+In the following chapter we describe how the completeness proofs from Chapter \ref{chapter:dpll} are implemented in the Minlog system and how Minlog can be used to extract programs from these proofs.  This begins with the definition of preliminary data types and operations described in Chapter \ref{chapter:dpll} and is followed by the implementation of the soundness and completeness of the DPLL proof system in Minlog. A unique feature of the Minlog system, namely \emph{non-computational quantifiers}, have been used to remove redundant data and computations and obtain a more efficient extracted program. The performance and behaviour of the extracted program is analysed in Section \ref{section:dpllapp}. A detailed overview of the Minlog system can be found in the Minlog Reference Manual \cite{MinlogRef}.
 
 \section{Formalising Preliminaries in the Minlog System}
 We have tried to stay faithful to the definition of the fundamental data types described in chapter \ref{chapter:satbackground} and to this end have defined a number of data types as algebras in Minlog, including the variable, literal, valuation, clause and formula. The variable is defined using the command $\mathbf{add-alg}$ which adds an algebra named "variable " with one constructor "Variable" which takes a natural number and returns a variable.
@@ -184,7 +184,7 @@ This inductive definition contains a number of \texttt{allnc} quantifiers which 
 
 
 \section{The Soundness (Incompatibility) of the DPLL Proof System in Minlog}
-We have formalised the incompatibility proof for the DPLL proof system following the proof found in chapter \ref{chapter:DPLL} that proof and this formalisation are both based on the Coq implementation \cite{SL08}. We shall now sketch some of the steps to carry out the proof using the Minlog system.
+We have formalised the incompatibility proof for the DPLL proof system following the proof found in chapter \ref{chapter:dpll} that proof and this formalisation are both based on the Coq implementation \cite{SL08}. We shall now sketch some of the steps to carry out the proof using the Minlog system.
 The proof goal is set in the Minlog system using the \texttt{set-goal} command:
 
 \begin{lstlisting}
@@ -537,7 +537,7 @@ $\mathbf{PHP}(2,2)$ results in the function
 $\mathrm{M}(l) = \True$ iff  $l \in \{ l_{12}, \mybar{ l_{11}}, l_{21}, \mybar{ l_{22}}  \}$.
 %all val,c.  (valclaIntersection val c = (Nil lit) -> F) ->  ex l. (memlitcla l c & memlitval l val)
 The Minlog output for the satisfiable formula $\mathbf{PHP}(2,2)$ is as follows. Here the square brackets represent a lambda abstraction for the literal $l_0$. The model $M$ is written as $\lambda l_0 . l_0 \in \{ l_{12}, \mybar{l_{11}},l_{21}, \mybar{l_{22}} \}$.
-\begin{lstlisting}[caption = "The model produced by X-SAT for PHP(2,2)"]
+\begin{lstlisting}[caption = "The model produced by X-SAT for PHP(2\,2)"]
 CsuccessOne
  ([l0]
   [if (l0=Pos(Variable 12))
